fix: icon alignment

--- a/src/components/Box/Box.module.scss
+++ b/src/components/Box/Box.module.scss
@@ -24,4 +24,8 @@
   a {
     max-width: 100%;
   }
+
+  img {
+    padding-left: 25px;
+  }
 }
